static/css/app.css
.fixed-bottom { background: white;}
.plcard, .bid { width: 60px; }
.text-danger .active, .text-danger.active { background: pink; }
.text-dark .active, .text-dark.active, #score .active { background: lightgrey; }

@media (max-width: 768px) {
  .nav-justified > li {
    display: table-cell;
    width: 1%;
  }
  .nav-justified > li > a  {
    border-bottom: 1px solid #ddd !important;
    border-radius: 4px 4px 0 0 !important;
    margin-bottom: 0 !important;
  }
}

